--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="myApp">
   <head>
     <meta charset="utf-8">
     <title>Angular Demo</title>
     <script src="lib/angular/angular.min.js"></script>
+    <script src="js/controllers.js"></script>
   </head>
 
   <body>
-    <input type="text" ng-model="name">
-    <h2>Welcome {{ name }}</h2>
+    <div ng-controller="MyController">
+      <h2>{{ author.name }}</h2>
+      <p>{{ author.title }}, {{ author.company }}</p>
+    </div>
 
 
   </body>
