--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!doctype html>
 <html lang="en" ng-app="myApp">
-  <head>
-    <meta charset="utf-8">
-    <title>Angular Demo</title>
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="js/controllers.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Angular Demo</title>
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="js/controllers.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-  <body>
-    <div ng-controller="MyController">
-      <h2>{{ author.name }}</h2>
-      <p>{{ author.title }}, {{ author.company }}</p>
-    </div>
+<div class="main" ng-controller = "MyController">
 
+<div class="search">
+  <h1>Artist Directory</h1>
+  <label>search: </label>
+  <input ng-model="query" placeholder="Search for artists" autofocus>
+    <label class="formgroup">by: 
+      <select ng-model="artistOrder">
+        <option value="name">Name</option>
+        <option value="reknown">Reknown</option>
+      </select>
+    </label>
+    <label class="formgroup">
+    <input type="radio" ng-model="direction" name="direction" checked>
+    ascending
+    </label>
+    <label>
+    <input type="radio" ng-model="direction" name="direction" value="reverse">
+    descending
+  </label>
+</div>
 
-  </body>
+  <ul class="artistlist">
+    <li class="artist cf" ng-repeat="artist in artists | filter: query | orderBy: artistOrder:direction">
+      <img ng-src="images/{{ artist.shortname }}_tn.jpg" alt="Photo of {{ artist.name }}">
+      <div class="info">
+        <h2>{{ artist.name | uppercase }}</h2>
+        <h3>{{ artist.reknown }}</h3>
+      </div>
+    </li>
+  </ul>
+</div>
+</body>
 </html>
